--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
     }
 
 
-    // Generate Signed APK ‚Ìƒtƒ@ƒCƒ‹–¼‚ð•ÏX
+    // Generate Signed APK ï¿½Ìƒtï¿½@ï¿½Cï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÏX
     android.applicationVariants.all { variant ->
         if (variant.buildType.name == "release") {
             variant.outputs.all {
@@ -49,7 +49,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -62,7 +62,7 @@ dependencies {
     implementation "com.beust:klaxon:5.0.1"
 
 
-    def coroutines_version = '1.2.2'
+    def coroutines_version = '1.3.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
